Simplify fabric8 catalog watcher (#1138)