@@ -1,5 +1,5 @@
 /*
- * Copyright 2013-2019 the original author or authors.
+ * Copyright 2013-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,6 @@
 
 package org.springframework.cloud.kubernetes.fabric8.discovery;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -29,16 +28,14 @@ import io.fabric8.kubernetes.api.model.ObjectReference;
 import io.fabric8.kubernetes.client.KubernetesClient;
 import io.fabric8.kubernetes.client.dsl.MixedOperation;
 import io.fabric8.kubernetes.client.dsl.Resource;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
-import org.mockito.Captor;
-import org.mockito.Mock;
 import org.mockito.Mockito;
-import org.mockito.junit.MockitoJUnitRunner;
 
 import org.springframework.cloud.client.discovery.event.HeartbeatEvent;
+import org.springframework.cloud.kubernetes.commons.discovery.EndpointNameAndNamespace;
 import org.springframework.cloud.kubernetes.commons.discovery.KubernetesDiscoveryProperties;
 import org.springframework.context.ApplicationEventPublisher;
 
@@ -52,228 +49,231 @@ import static org.mockito.Mockito.when;
 /**
  * @author Oleg Vyukov
  */
-@RunWith(MockitoJUnitRunner.class)
-public class KubernetesCatalogWatchTest {
+@SuppressWarnings("unchecked")
+class KubernetesCatalogWatchTest {
 
 	private static final KubernetesClient CLIENT = Mockito.mock(KubernetesClient.class);
 
 	private final KubernetesCatalogWatch kubernetesCatalogWatch = new KubernetesCatalogWatch(CLIENT,
 			KubernetesDiscoveryProperties.DEFAULT);
 
-	@Mock
-	private ApplicationEventPublisher applicationEventPublisher;
+	private static final ApplicationEventPublisher APPLICATION_EVENT_PUBLISHER = Mockito
+			.mock(ApplicationEventPublisher.class);
 
-	@Mock
-	private MixedOperation<Endpoints, EndpointsList, Resource<Endpoints>> endpointsOperation;
+	private static final MixedOperation<Endpoints, EndpointsList, Resource<Endpoints>> MIXED_OPERATION = Mockito
+			.mock(MixedOperation.class);
 
-	@Captor
-	private ArgumentCaptor<HeartbeatEvent> heartbeatEventArgumentCaptor;
+	private static final ArgumentCaptor<HeartbeatEvent> HEARTBEAT_EVENT_ARGUMENT_CAPTOR = ArgumentCaptor
+			.forClass(HeartbeatEvent.class);
 
-	@Before
-	public void setUp() throws Exception {
-		kubernetesCatalogWatch.setApplicationEventPublisher(this.applicationEventPublisher);
+	@BeforeEach
+	void setUp() {
+		kubernetesCatalogWatch.setApplicationEventPublisher(APPLICATION_EVENT_PUBLISHER);
+	}
+
+	@AfterEach
+	void afterEach() {
+		Mockito.reset(APPLICATION_EVENT_PUBLISHER, CLIENT, MIXED_OPERATION);
 	}
 
 	@Test
-	public void testRandomOrderChangePods() throws Exception {
-		when(this.endpointsOperation.list())
-				.thenReturn(createSingleEndpointEndpointListByPodName("api-pod", "other-pod"))
+	void testRandomOrderChangePods() {
+		when(MIXED_OPERATION.list()).thenReturn(createSingleEndpointEndpointListByPodName("api-pod", "other-pod"))
 				.thenReturn(createSingleEndpointEndpointListByPodName("other-pod", "api-pod"));
-		when(CLIENT.endpoints()).thenReturn(this.endpointsOperation);
-		when(CLIENT.endpoints().withLabels(anyMap())).thenReturn(this.endpointsOperation);
+		when(CLIENT.endpoints()).thenReturn(MIXED_OPERATION);
+		when(CLIENT.endpoints().withLabels(anyMap())).thenReturn(MIXED_OPERATION);
 
 		kubernetesCatalogWatch.catalogServicesWatch();
 		// second execution on shuffleServices
 		kubernetesCatalogWatch.catalogServicesWatch();
 
-		verify(this.applicationEventPublisher).publishEvent(any(HeartbeatEvent.class));
+		verify(APPLICATION_EVENT_PUBLISHER).publishEvent(any(HeartbeatEvent.class));
 	}
 
 	@Test
-	public void testRandomOrderChangePodsAllNamespaces() throws Exception {
-		when(this.endpointsOperation.list())
-				.thenReturn(createSingleEndpointEndpointListByPodName("api-pod", "other-pod"))
+	void testRandomOrderChangePodsAllNamespaces() {
+		when(MIXED_OPERATION.list()).thenReturn(createSingleEndpointEndpointListByPodName("api-pod", "other-pod"))
 				.thenReturn(createSingleEndpointEndpointListByPodName("other-pod", "api-pod"));
-		when(CLIENT.endpoints()).thenReturn(this.endpointsOperation);
-		when(CLIENT.endpoints().inAnyNamespace()).thenReturn(this.endpointsOperation);
-		when(CLIENT.endpoints().inAnyNamespace().withLabels(anyMap())).thenReturn(this.endpointsOperation);
+		when(CLIENT.endpoints()).thenReturn(MIXED_OPERATION);
+		when(CLIENT.endpoints().inAnyNamespace()).thenReturn(MIXED_OPERATION);
+		when(CLIENT.endpoints().inAnyNamespace().withLabels(anyMap())).thenReturn(MIXED_OPERATION);
 
 		kubernetesCatalogWatch.catalogServicesWatch();
 		// second execution on shuffleServices
 		kubernetesCatalogWatch.catalogServicesWatch();
 
-		verify(this.applicationEventPublisher).publishEvent(any(HeartbeatEvent.class));
+		verify(APPLICATION_EVENT_PUBLISHER).publishEvent(any(HeartbeatEvent.class));
 	}
 
 	@Test
-	public void testRandomOrderChangeServices() throws Exception {
-		when(this.endpointsOperation.list())
-				.thenReturn(createEndpointsListByServiceName("api-service", "other-service"))
+	void testRandomOrderChangeServices() {
+		when(MIXED_OPERATION.list()).thenReturn(createEndpointsListByServiceName("api-service", "other-service"))
 				.thenReturn(createEndpointsListByServiceName("other-service", "api-service"));
-		when(CLIENT.endpoints()).thenReturn(this.endpointsOperation);
-		when(CLIENT.endpoints().withLabels(anyMap())).thenReturn(this.endpointsOperation);
+		when(CLIENT.endpoints()).thenReturn(MIXED_OPERATION);
+		when(CLIENT.endpoints().withLabels(anyMap())).thenReturn(MIXED_OPERATION);
 
 		kubernetesCatalogWatch.catalogServicesWatch();
 		// second execution on shuffleServices
 		kubernetesCatalogWatch.catalogServicesWatch();
 
-		verify(this.applicationEventPublisher).publishEvent(any(HeartbeatEvent.class));
+		verify(APPLICATION_EVENT_PUBLISHER).publishEvent(any(HeartbeatEvent.class));
 	}
 
 	@Test
-	public void testRandomOrderChangeServicesAllNamespaces() throws Exception {
-		when(this.endpointsOperation.list())
-				.thenReturn(createEndpointsListByServiceName("api-service", "other-service"))
+	void testRandomOrderChangeServicesAllNamespaces() {
+		when(MIXED_OPERATION.list()).thenReturn(createEndpointsListByServiceName("api-service", "other-service"))
 				.thenReturn(createEndpointsListByServiceName("other-service", "api-service"));
-		when(CLIENT.endpoints()).thenReturn(this.endpointsOperation);
-		when(CLIENT.endpoints().inAnyNamespace()).thenReturn(this.endpointsOperation);
-		when(CLIENT.endpoints().inAnyNamespace().withLabels(anyMap())).thenReturn(this.endpointsOperation);
+		when(CLIENT.endpoints()).thenReturn(MIXED_OPERATION);
+		when(CLIENT.endpoints().inAnyNamespace()).thenReturn(MIXED_OPERATION);
+		when(CLIENT.endpoints().inAnyNamespace().withLabels(anyMap())).thenReturn(MIXED_OPERATION);
 
 		kubernetesCatalogWatch.catalogServicesWatch();
 		// second execution on shuffleServices
 		kubernetesCatalogWatch.catalogServicesWatch();
 
-		verify(this.applicationEventPublisher).publishEvent(any(HeartbeatEvent.class));
+		verify(APPLICATION_EVENT_PUBLISHER).publishEvent(any(HeartbeatEvent.class));
 	}
 
 	@Test
-	public void testEventBody() throws Exception {
-		when(this.endpointsOperation.list())
-				.thenReturn(createSingleEndpointEndpointListByPodName("api-pod", "other-pod"));
-		when(CLIENT.endpoints()).thenReturn(this.endpointsOperation);
-		when(CLIENT.endpoints().withLabels(anyMap())).thenReturn(this.endpointsOperation);
+	void testEventBody() {
+		when(MIXED_OPERATION.list())
+				.thenReturn(createSingleEndpointListWithNamespace("default", "api-pod", "other-pod"));
+		when(CLIENT.endpoints()).thenReturn(MIXED_OPERATION);
+		when(CLIENT.endpoints().withLabels(anyMap())).thenReturn(MIXED_OPERATION);
 
 		kubernetesCatalogWatch.catalogServicesWatch();
 
-		verify(this.applicationEventPublisher).publishEvent(this.heartbeatEventArgumentCaptor.capture());
+		verify(APPLICATION_EVENT_PUBLISHER).publishEvent(HEARTBEAT_EVENT_ARGUMENT_CAPTOR.capture());
 
-		HeartbeatEvent event = this.heartbeatEventArgumentCaptor.getValue();
+		HeartbeatEvent event = HEARTBEAT_EVENT_ARGUMENT_CAPTOR.getValue();
 		assertThat(event.getValue()).isInstanceOf(List.class);
 
-		List<String> expectedPodsList = Arrays.asList("api-pod", "other-pod");
-		assertThat(event.getValue()).isEqualTo(expectedPodsList);
+		List<EndpointNameAndNamespace> expectedOutput = List.of(new EndpointNameAndNamespace("api-pod", "default"),
+				new EndpointNameAndNamespace("other-pod", "default"));
+		assertThat(event.getValue()).isEqualTo(expectedOutput);
 	}
 
 	@Test
-	public void testEventBodyAllNamespaces() throws Exception {
-		when(this.endpointsOperation.list())
-				.thenReturn(createSingleEndpointEndpointListByPodName("api-pod", "other-pod"));
-		when(CLIENT.endpoints()).thenReturn(this.endpointsOperation);
-		when(CLIENT.endpoints().inAnyNamespace()).thenReturn(this.endpointsOperation);
-		when(CLIENT.endpoints().inAnyNamespace().withLabels(anyMap())).thenReturn(this.endpointsOperation);
+	void testEventBodyAllNamespaces() {
+		when(MIXED_OPERATION.list())
+				.thenReturn(createSingleEndpointListWithNamespace("default", "api-pod", "other-pod"));
+		when(CLIENT.endpoints()).thenReturn(MIXED_OPERATION);
+		when(CLIENT.endpoints().inAnyNamespace()).thenReturn(MIXED_OPERATION);
+		when(CLIENT.endpoints().inAnyNamespace().withLabels(anyMap())).thenReturn(MIXED_OPERATION);
 
 		kubernetesCatalogWatch.catalogServicesWatch();
 
-		verify(this.applicationEventPublisher).publishEvent(this.heartbeatEventArgumentCaptor.capture());
+		verify(APPLICATION_EVENT_PUBLISHER).publishEvent(HEARTBEAT_EVENT_ARGUMENT_CAPTOR.capture());
 
-		HeartbeatEvent event = this.heartbeatEventArgumentCaptor.getValue();
+		HeartbeatEvent event = HEARTBEAT_EVENT_ARGUMENT_CAPTOR.getValue();
 		assertThat(event.getValue()).isInstanceOf(List.class);
 
-		List<String> expectedPodsList = Arrays.asList("api-pod", "other-pod");
-		assertThat(event.getValue()).isEqualTo(expectedPodsList);
+		List<EndpointNameAndNamespace> expectedOutput = List.of(new EndpointNameAndNamespace("api-pod", "default"),
+				new EndpointNameAndNamespace("other-pod", "default"));
+		assertThat(event.getValue()).isEqualTo(expectedOutput);
 	}
 
 	@Test
-	public void testEndpointsWithoutSubsets() {
+	void testEndpointsWithoutSubsets() {
 
 		EndpointsList endpoints = createSingleEndpointEndpointListWithoutSubsets();
 
-		when(this.endpointsOperation.list()).thenReturn(endpoints);
-		when(CLIENT.endpoints()).thenReturn(this.endpointsOperation);
-		when(CLIENT.endpoints().withLabels(anyMap())).thenReturn(this.endpointsOperation);
+		when(MIXED_OPERATION.list()).thenReturn(endpoints);
+		when(CLIENT.endpoints()).thenReturn(MIXED_OPERATION);
+		when(CLIENT.endpoints().withLabels(anyMap())).thenReturn(MIXED_OPERATION);
 
 		kubernetesCatalogWatch.catalogServicesWatch();
 		// second execution on shuffleServices
 		kubernetesCatalogWatch.catalogServicesWatch();
 
-		verify(this.applicationEventPublisher).publishEvent(any(HeartbeatEvent.class));
+		verify(APPLICATION_EVENT_PUBLISHER).publishEvent(any(HeartbeatEvent.class));
 	}
 
 	@Test
-	public void testEndpointsWithoutSubsetsAllNamespaces() {
+	void testEndpointsWithoutSubsetsAllNamespaces() {
 
 		EndpointsList endpoints = createSingleEndpointEndpointListWithoutSubsets();
 
-		when(this.endpointsOperation.list()).thenReturn(endpoints);
-		when(CLIENT.endpoints()).thenReturn(this.endpointsOperation);
-		when(CLIENT.endpoints().inAnyNamespace()).thenReturn(this.endpointsOperation);
-		when(CLIENT.endpoints().inAnyNamespace().withLabels(anyMap())).thenReturn(this.endpointsOperation);
+		when(MIXED_OPERATION.list()).thenReturn(endpoints);
+		when(CLIENT.endpoints()).thenReturn(MIXED_OPERATION);
+		when(CLIENT.endpoints().inAnyNamespace()).thenReturn(MIXED_OPERATION);
+		when(CLIENT.endpoints().inAnyNamespace().withLabels(anyMap())).thenReturn(MIXED_OPERATION);
 
 		kubernetesCatalogWatch.catalogServicesWatch();
 		// second execution on shuffleServices
 		kubernetesCatalogWatch.catalogServicesWatch();
 
-		verify(this.applicationEventPublisher).publishEvent(any(HeartbeatEvent.class));
+		verify(APPLICATION_EVENT_PUBLISHER).publishEvent(any(HeartbeatEvent.class));
 	}
 
 	@Test
-	public void testEndpointsWithoutAddresses() {
+	void testEndpointsWithoutAddresses() {
 
 		EndpointsList endpoints = createSingleEndpointEndpointListByPodName("api-pod");
 		endpoints.getItems().get(0).getSubsets().get(0).setAddresses(null);
 
-		when(this.endpointsOperation.list()).thenReturn(endpoints);
-		when(CLIENT.endpoints()).thenReturn(this.endpointsOperation);
-		when(CLIENT.endpoints().withLabels(anyMap())).thenReturn(this.endpointsOperation);
+		when(MIXED_OPERATION.list()).thenReturn(endpoints);
+		when(CLIENT.endpoints()).thenReturn(MIXED_OPERATION);
+		when(CLIENT.endpoints().withLabels(anyMap())).thenReturn(MIXED_OPERATION);
 
 		kubernetesCatalogWatch.catalogServicesWatch();
 		// second execution on shuffleServices
 		kubernetesCatalogWatch.catalogServicesWatch();
 
-		verify(this.applicationEventPublisher).publishEvent(any(HeartbeatEvent.class));
+		verify(APPLICATION_EVENT_PUBLISHER).publishEvent(any(HeartbeatEvent.class));
 	}
 
 	@Test
-	public void testEndpointsWithoutAddressesAllNamespaces() {
+	void testEndpointsWithoutAddressesAllNamespaces() {
 
 		EndpointsList endpoints = createSingleEndpointEndpointListByPodName("api-pod");
 		endpoints.getItems().get(0).getSubsets().get(0).setAddresses(null);
 
-		when(this.endpointsOperation.list()).thenReturn(endpoints);
-		when(CLIENT.endpoints()).thenReturn(this.endpointsOperation);
-		when(CLIENT.endpoints().inAnyNamespace()).thenReturn(this.endpointsOperation);
-		when(CLIENT.endpoints().inAnyNamespace().withLabels(anyMap())).thenReturn(this.endpointsOperation);
+		when(MIXED_OPERATION.list()).thenReturn(endpoints);
+		when(CLIENT.endpoints()).thenReturn(MIXED_OPERATION);
+		when(CLIENT.endpoints().inAnyNamespace()).thenReturn(MIXED_OPERATION);
+		when(CLIENT.endpoints().inAnyNamespace().withLabels(anyMap())).thenReturn(MIXED_OPERATION);
 
 		kubernetesCatalogWatch.catalogServicesWatch();
 		// second execution on shuffleServices
 		kubernetesCatalogWatch.catalogServicesWatch();
 
-		verify(this.applicationEventPublisher).publishEvent(any(HeartbeatEvent.class));
+		verify(APPLICATION_EVENT_PUBLISHER).publishEvent(any(HeartbeatEvent.class));
 	}
 
 	@Test
-	public void testEndpointsWithoutTargetRefs() {
+	void testEndpointsWithoutTargetRefs() {
 
 		EndpointsList endpoints = createSingleEndpointEndpointListByPodName("api-pod");
 		endpoints.getItems().get(0).getSubsets().get(0).getAddresses().get(0).setTargetRef(null);
 
-		when(this.endpointsOperation.list()).thenReturn(endpoints);
-		when(CLIENT.endpoints()).thenReturn(this.endpointsOperation);
-		when(CLIENT.endpoints().withLabels(anyMap())).thenReturn(this.endpointsOperation);
+		when(MIXED_OPERATION.list()).thenReturn(endpoints);
+		when(CLIENT.endpoints()).thenReturn(MIXED_OPERATION);
+		when(CLIENT.endpoints().withLabels(anyMap())).thenReturn(MIXED_OPERATION);
 
 		kubernetesCatalogWatch.catalogServicesWatch();
 		// second execution on shuffleServices
 		kubernetesCatalogWatch.catalogServicesWatch();
 
-		verify(this.applicationEventPublisher).publishEvent(any(HeartbeatEvent.class));
+		verify(APPLICATION_EVENT_PUBLISHER).publishEvent(any(HeartbeatEvent.class));
 	}
 
 	@Test
-	public void testEndpointsWithoutTargetRefsAllNamespaces() {
+	void testEndpointsWithoutTargetRefsAllNamespaces() {
 
 		EndpointsList endpoints = createSingleEndpointEndpointListByPodName("api-pod");
 		endpoints.getItems().get(0).getSubsets().get(0).getAddresses().get(0).setTargetRef(null);
 
-		when(this.endpointsOperation.list()).thenReturn(endpoints);
-		when(CLIENT.endpoints()).thenReturn(this.endpointsOperation);
-		when(CLIENT.endpoints().inAnyNamespace()).thenReturn(this.endpointsOperation);
-		when(CLIENT.endpoints().inAnyNamespace().withLabels(anyMap())).thenReturn(this.endpointsOperation);
+		when(MIXED_OPERATION.list()).thenReturn(endpoints);
+		when(CLIENT.endpoints()).thenReturn(MIXED_OPERATION);
+		when(CLIENT.endpoints().inAnyNamespace()).thenReturn(MIXED_OPERATION);
+		when(CLIENT.endpoints().inAnyNamespace().withLabels(anyMap())).thenReturn(MIXED_OPERATION);
 
 		kubernetesCatalogWatch.catalogServicesWatch();
 		// second execution on shuffleServices
 		kubernetesCatalogWatch.catalogServicesWatch();
 
-		verify(this.applicationEventPublisher).publishEvent(any(HeartbeatEvent.class));
+		verify(APPLICATION_EVENT_PUBLISHER).publishEvent(any(HeartbeatEvent.class));
 	}
 
 	private EndpointsList createEndpointsListByServiceName(String... serviceNames) {
@@ -302,6 +302,15 @@ public class KubernetesCatalogWatchTest {
 		return endpointsList;
 	}
 
+	private EndpointsList createSingleEndpointListWithNamespace(String namespace, String... podNames) {
+		Endpoints endpoints = new Endpoints();
+		endpoints.setSubsets(createSubsetsWithNamespace(namespace, podNames));
+
+		EndpointsList endpointsList = new EndpointsList();
+		endpointsList.setItems(Collections.singletonList(endpoints));
+		return endpointsList;
+	}
+
 	private Endpoints createEndpointsByPodName(String podName) {
 		Endpoints endpoints = new Endpoints();
 		endpoints.setSubsets(createSubsetsByPodName(podName));
@@ -314,10 +323,27 @@ public class KubernetesCatalogWatchTest {
 		return Collections.singletonList(endpointSubset);
 	}
 
+	private List<EndpointSubset> createSubsetsWithNamespace(String namespace, String... names) {
+		EndpointSubset endpointSubset = new EndpointSubset();
+		endpointSubset.setAddresses(createEndpointAddressWithNamespace(names, namespace));
+		return Collections.singletonList(endpointSubset);
+	}
+
 	private List<EndpointAddress> createEndpointAddressByPodNames(String[] names) {
 		return stream(names).map(name -> {
 			ObjectReference podRef = new ObjectReference();
 			podRef.setName(name);
+			EndpointAddress endpointAddress = new EndpointAddress();
+			endpointAddress.setTargetRef(podRef);
+			return endpointAddress;
+		}).collect(Collectors.toList());
+	}
+
+	private List<EndpointAddress> createEndpointAddressWithNamespace(String[] names, String namespace) {
+		return stream(names).map(name -> {
+			ObjectReference podRef = new ObjectReference();
+			podRef.setName(name);
+			podRef.setNamespace(namespace);
 			EndpointAddress endpointAddress = new EndpointAddress();
 			endpointAddress.setTargetRef(podRef);
 			return endpointAddress;
